# Vociferous

./: .gitignore  CHANGELOG.md  Makefile  README.md  TECH_DEBT.md  pyproject.toml  requirements.txt
.agent_resources/: workboard.md
.github/: copilot-instructions.md
docs/: cpu-refinement-speedup-plan.md
frontend/: index.html
frontend/src/: App.svelte  app.css
frontend/src/lib/: api.ts  events.ts  formatters.ts  navigation.svelte.ts  textAnalysis.ts  toast.svelte.ts  windowSize.svelte.ts  ws.ts  zoom.ts
frontend/src/lib/components/: ActionBar.svelte  ActivityChart.svelte  ActivityHeatmap.svelte  AnalyticsParagraph.svelte  AsrModelCard.svelte  BarSpectrumVisualizer.svelte  BulkActionsPanel.svelte  CustomSelect.svelte  DistributionChart.svelte  DownloadButton.svelte  EmptyState.svelte  IconRail.svelte  KeyBindCapture.svelte  MaintenanceCard.svelte  MarkdownBody.svelte  ObsidianCard.svelte  OutputCard.svelte  ProjectContextMenu.svelte  RadarChart.svelte  RecordingControls.svelte  RecordingOrrery.svelte  RecordingPulse.svelte  RefinementCard.svelte  StyledButton.svelte  TagBar.svelte  TitleBar.svelte  ToastContainer.svelte  ToggleSwitch.svelte  Tooltip.svelte  TranscriptDetailPanel.svelte  WorkspacePanel.svelte
frontend/src/views/: EditView.svelte  RefineView.svelte  SettingsView.svelte  TranscribeView.svelte  TranscriptsView.svelte  UserView.svelte
scripts/: fix_gpu.sh  install.sh  install_mac.sh  install_windows.ps1  install_windows_shortcut.ps1  purge_old_data.sh  uninstall_windows_shortcut.ps1
src/: main.py
src/api/: app.py  projects.py  system.py  tags.py  transcripts.py  window.py
src/core/: application_coordinator.py  constants.py  device_detection.py  idle_unload.py  insight_manager.py  log_manager.py  model_registry.py  resource_manager.py  settings.py  text_analysis.py  usage_stats.py  window_controller.py
src/core/handlers/: recording_handlers.py  refinement_handlers.py  system_handlers.py  tag_handlers.py  transcript_handlers.py
src/core/intents/: definitions.py
src/database/: db.py  migrations.py
src/input_handler/: __init__.py  key_capture.py  listener.py
src/input_handler/backends/: evdev.py
src/provisioning/: cli.py  core.py  requirements.py
src/refinement/: engine.py  prompt_builder.py
src/services/: audio_cache.py  audio_pipeline.py  audio_service.py  obsidian_vault.py  slm_runtime.py  transcription_service.py
tests/: conftest.py
tests/integration/: test_api_error_handling.py  test_api_routes.py  test_application_lifecycle.py  test_coordinator_handlers.py
tests/unit/: test_audio_pipeline.py  test_audio_service.py  test_database.py  test_database_edge_cases.py  test_device_detection.py  test_handlers.py  test_insight_manager.py  test_prompt_builder.py  test_provisioning.py  test_recording_session.py  test_refinement_engine.py  test_settings.py  test_settings_resilience.py  test_slm_runtime.py  test_text_analysis.py  test_title_generator.py  test_transcription_service.py  test_usage_stats.py
