[project]
name = "vociferous"
version = "4.4.1"
description = "Cross-platform speech-to-text with offline transcription and SLM refinement"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"

[project.urls]
"Homepage" = "https://github.com/WanderingAstronomer/Vociferous"
"Changelog" = "https://github.com/WanderingAstronomer/Vociferous/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/WanderingAstronomer/Vociferous/issues"

[project.scripts]
vociferous = "src.main:main"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
extend-ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
namespace_packages = true
files = ["src", "tests"]
exclude = ["scripts", "frontend"]
ignore_missing_imports = true
strict_optional = false
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
filterwarnings = [
    "ignore::FutureWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that test multiple components together",
]
