[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vociferous"
version = "5.10.3"
description = "Cross-platform speech-to-text with offline transcription and SLM refinement"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
dependencies = [
    # Window Shell
    "pywebview>=5.0",
    "pywebview[gtk]>=5.0; sys_platform == 'linux'",
    # API Server
    "litestar>=2.0",
    "uvicorn>=0.30.0",
    "websockets>=13.0",
    # Unified Inference (CTranslate2 — ASR + SLM)
    "ctranslate2>=4.5.0",
    "faster-whisper>=1.1.0",
    "tokenizers>=0.20.0",
    # Configuration
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # Audio Capture & Processing
    "sounddevice>=0.5.0",
    "numpy>=2.0.0",
    # Voice Activity Detection (Silero VAD)
    "onnxruntime>=1.17.0",
    # Cross-platform path resolution
    "platformdirs>=4.0",
    # System utilities
    "psutil>=6.0.0",
    # Input Handling
    "pynput>=1.8.0",
    "evdev>=1.9.0; sys_platform == 'linux'",
    "python-xlib>=0.33; sys_platform == 'linux'",
    # Model Downloads
    "huggingface-hub>=0.26.0",
    "tqdm>=4.67.0",
    "filelock>=3.20.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.14.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/WanderingAstronomer/Vociferous"
"Changelog" = "https://github.com/WanderingAstronomer/Vociferous/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/WanderingAstronomer/Vociferous/issues"

[project.scripts]
vociferous = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
extend-ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
namespace_packages = true
files = ["src", "tests"]
exclude = ["scripts", "frontend"]
ignore_missing_imports = true
strict_optional = false
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
filterwarnings = [
    "ignore::FutureWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that test multiple components together",
]
